tests/ui/diagnostic_namespace/on_move/on_move_simple.rs
#[diagnostic::on_move(
    message = "Foo",
    label = "Bar",
)]
#[derive(Debug)]
struct Foo;

fn takes_foo(_: Foo) {}

fn main() {
    let foo = Foo;
    takes_foo(foo);
    let bar = foo;
    //~^ERROR Foo
}
